2010-12-25  Andrew John Hughes  <ahughes@redhat.com>

	PR classpath/42390
	* java/io/File.java:
	(isHidden()): Add and document missing
	security check.

2010-12-25  Andrew John Hughes  <ahughes@redhat.com>

	PR classpath/42390
	* java/util/logging/LogManager.java:
	(addPropertyChangeListener(PropertyChangeListener)):
	Document fully.  Throw NPE in a clearer way.  Add
	SecurityException.
	(removePropertyChangeListener(PropertyChangeListener)):
	Document fully. Add SecurityException.

2010-12-25  Andrew John Hughes  <ahughes@redhat.com>

	PR classpath/42390
	* java/io/ObjectOutputStream.java:
	(ObjectOutputStream(OutputStream)): Add
	required security check.
	(overridesMethods(Class<?>)): Check whether
	the subclass overrides one of the methods
	which requires a security check.

2010-12-24  Andrew John Hughes  <ahughes@redhat.com>

	* java/security/ProtectionDomain.java,
	(hasAllPermissions): Add new field.
	(ProtectionDomain(CodeSource,PermissionCollection,
	ClassLoader,Principal,boolean)): Check if permission
	collection includes AllPermission and, if so, set
	hasAllPermissions.
	(implies(Permission)): Immediately return true if
	hasAllPermissions is set.

2006-07-21  Tom Tromey  <tromey@redhat.com>

	* vm/reference/java/lang/VMClass.java:
	(getSimpleName()): Use implementation from
	gcj.

2010-12-02  Andrew John Hughes  <ahughes@redhat.com>

	PR classpath/46775
	* vm/reference/java/security/VMAccessController.java:
	(DEFAULT_CONTEXT): Create ProtectionDomain with
	four argument constructor (arguments are the same
	as those implied by the two argument constructor).
	(getContext()): Create ProtectionDomain instances
	with four argument constructor using a null Principal
	array (as before) but including the classloader, which
	was always null before.

2010-11-04  Andrew John Hughes  <ahughes@redhat.com>

	* config.rpath:
	Add file required by autogen.sh due to use
	of AM_ICONV.
	* m4/ax_func_which_gethostbyname_r.m4:
	Use AC_LANG_SOURCE as suggested by warnings from